--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Besnik.</title>
+    <title>Besnik</title>
     <meta
       name="description"
       content="Get the best real estate deals first, before they hit the mass market! hot foreclosure deals with one simple search"
